# E7-RTA-Archive

./: .dockerignore  .gitignore  .mailmap  Commands.txt  LICENSE  README.md  TODO.txt  celerybeat-schedule  celerybeat-schedule.bak  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.release.build.yaml  docker-compose.release.yaml  dockerfile  dockerfile.celery.prod  dockerfile.dev  dockerfile.nginx.prod  dockerfile.prod  features.txt  filter_syntax.txt  package.json  pyproject.celery.toml  pyproject.toml  requirements.txt  run.py  tsconfig.json  webpack.config.cjs  webpack.config.js
apps/: __init__.py  archive.py  config.py  content_manager.py  db.sqlite3  info_savers.py  json_log_formatter.py  log_ip_hash.py  log_request_info_filter.py  logging_config.json  logging_manager.py  manifest.py  models.py  predefine_filters.py  redis_manager.py  tasks.py  test.py
apps/app_data/: artifact_json.pickle  hero_manager.pickle  season_details.pickle
apps/e7_utils/: artifact_manager.py  battle_manager.py  content_manager.py  filter_syntax.py  filter_utils.py  hero_manager.py  plots.py  query_user_battles.py  references.py  season_details.py  user_manager.py  utils.py  validations.py
apps/exceptions/: exception.py
apps/home/: forms.py  read_data.py  routes.py
apps/log_management/: hash_ip.py  log_request_info_filter.py  log_utils.py  logging_config.json  logging_config_celery.json  logging_manager.py
apps/logging/: hash_ip.py  json_log_formatter.py  (+4 more)
archive/: table_js.js
e7_rs_tools/: .gitignore  Cargo.toml
e7_rs_tools/src/: battle_api_structs.rs  battle_info_structs.rs  deserializers.rs  e7_api.rs  lib.rs
nginx/: default.conf  prod.conf
static/: robots.txt  sitemap.xml
(+205 files in other folders)
