[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "e7-rta-archive"
version = "0.1.0"
description = "E7 Web App for RTA History Tracking"
authors = [{ name = "EJS" }]
requires-python = ">=3.12"

dependencies = [
    # core
    "flask==3.1.0",
    "Werkzeug==3.1.3",
    "jinja2==3.1.5",
    "WTForms==3.2.1",
    "flask_wtf==1.2.2",
    "pandas==2.2.3",

    # session
    "flask_session==0.8.0",

    # compression
    "brotli==1.1.0",
    "flask-compress===1.17",

    # DB
    "flask_migrate==4.1.0",
    "flask_sqlalchemy==3.1.1",
    "sqlalchemy==2.0.38",

    # Rust
    "maturin==1.8.6",

    # tools
    "flask_login==0.6.3",
    "flask-restx==1.3.0",
    "flask-dance==7.1.0",
    "celery==5.4.0",
    "redis==5.2.1",
    "marshmallow==3.26.1",
    "marshmallow-sqlalchemy==1.4.1",
    "colorama==0.4.6",
    "PyJWT~=2.10.1",
    "WTForms-Alchemy==0.19.0",
    "jsonpickle==4.0.5",

    # e7 content tools
    "sympy==1.14.0",
    "requests==2.32.3",
    "pyarrow==20.0.0",

    # utils
    "email_validator==2.2.0",
    "blinker==1.9.0",

    # env
    "python-dotenv==1.0.1",

    # deployment
    "gunicorn==23.0.0",
    "Flask-Minify==0.49",
    "Flask-CDN==1.5.3"
]