[package]
name = "e7_rs_tools"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
pyo3 = { version = "0.21.0", features = ["extension-module"] }
once_cell = "1.19"
